set up code generation and frontend parts2
